# Epubify

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev-requirements.txt  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
epubify/: __main__.py  ascii_art.py  epubify.py  epubify_win.py  main.py  utils.py
epubify/books/: 10_simple_ways_you_can_help_stop_wildlife_poaching_today.epub  24_неща_които_със_сигурност_не_знаете_за_адолф_хитлер_и_нацистка_германия.epub  9_юни_90_г_от_военния_преврат_довел_до_жестокото_убийство_на_александър_стамболийски.epub  FAILED_BOOK_TITLES.txt  README.md  alan_turing.epub  auschwitz_concentration_camp.epub  berlin_wall.epub  breaking_original_1954_bilderberg_minutes_reveal_backroom_dealings_from_the_start.epub  chicxulub_crater.epub  cicada_3301.epub  climate_change_us_formally_withdraws_from_paris_agreement.epub  cold_war_in_bulgaria_and_romania.epub  comparing_api_architectural_styles_soap_vs_rest_vs_graphql_vs_rpc.epub  corruption_crisis_puts_bulgarias_borissov_on_the_ropes.epub  cosmo_meets_kurt_yaeger_star_of_rudimentals_waiting_all_night_video.epub  courtesy_titles_in_the_united_kingdom.epub  covid19_начало_на_великата_перестройка.epub  dyatlov_pass_incident.epub  europa_moon.epub  fall_of_the_cabal.epub  final_solution.epub  flying_drones_in_iceland_all_you_need_to_know.epub  gates_globalist_vaccine_agenda_a_winwin_for_pharma_and_mandatory_vaccination.epub  hiroshima.epub  history_of_the_netherlands.epub  laki.epub  (+133 more)
img/: epubify_diagram.xml
test/: epubify.py
(+24 files in other folders)
