[metadata]
# replace with your username:
name = ani.dimitrova
version = 0.0.1
author = Anelia Dimitrova
author_email = a.dimitrovaa@gmail.com
description = A package to convert your Pocket articles into Epub books to read them easily on ebook readers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/adimitrova/Epubify
project_urls =
    Bug Tracker = https://github.com/adimitrova/Epubify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix-based

[options]
package_dir =
    = epubify
packages = find:
python_requires = >=3.6

[options.packages.find]
where = epubify